--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE htmal>
+<html lang="it">
+     <head>
+        <title>Pagina web e Github <\title>
+        <meta charset="UTF-8">
+        <meta name="description" content="Pagina web con Github"> 
+        <meta name="keywords" content="Ttf, Davide, Giroli, Prova">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="VF && PP">
+        <link rel="stylesheet" type="text/css" href="style.css">
+         </head>
+     <body>
+       <h1>Github per la prova: creiamo e pubblichiamo una pagina web </h1>
+         </body>
+         </html>
